# mopidy-goodies

./: README.md  pyproject.toml
mopidy_goodies/: __init__.py  audio.py  ext.conf  handlers.py  stats.py  tidal.py  visualizer.py
mopidy_tidal_goodies/: __init__.py  handlers.py
packaging/aur/mopidy-goodies-git/: .SRCINFO  PKGBUILD
tests/: test_audio.py  test_smoke.py  test_visualizer.py
